--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
+    "element-plus": "^2.5.3",
     "vue": "^3.4.15"
   }
 }
