--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    // "types": ["element-plus/global"]
-  },
-  "include": ["src"]
+    "types": ["element-plus/global"]
+  }
 }
