auto migration failed using Umzug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "types": ["element-plus/global"]
   }
 }
