--- a/package.json
+++ b/package.json
@@ -1,47 +1,54 @@
 {
-  "name": "electron-forge-vite-ts-vue",
-  "productName": "electron-forge-vite-ts-vue",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": ".vite/build/main.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.3.0",
-    "@electron-forge/maker-deb": "^7.3.0",
-    "@electron-forge/maker-rpm": "^7.3.0",
-    "@electron-forge/maker-squirrel": "^7.3.0",
-    "@electron-forge/maker-zip": "^7.3.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.3.0",
-    "@electron-forge/plugin-fuses": "^7.2.0",
-    "@electron-forge/plugin-vite": "^7.3.0",
-    "@electron/fuses": "^1.7.0",
-    "@types/express": "^4.17.21",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "electron": "29.0.1",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.5.4",
-    "vite": "^5.0.12"
-  },
-  "keywords": [],
-  "author": {
-    "name": "Angus Lin",
-    "email": "Angus.lin@microtek.com.tw"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
-    "element-plus": "^2.5.6",
-    "express": "^4.18.2",
-    "vue": "^3.4.19"
-  }
+	"name": "electron-forge-vite-ts-vue",
+	"productName": "electron-forge-vite-ts-vue",
+	"version": "1.0.0",
+	"description": "My Electron application description",
+	"main": ".vite/build/main.js",
+	"scripts": {
+		"start": "electron-forge start",
+		"package": "electron-forge package",
+		"make": "electron-forge make",
+		"publish": "electron-forge publish",
+		"lint": "eslint --ext .ts,.tsx ."
+	},
+	"devDependencies": {
+		"@electron-forge/cli": "^7.3.0",
+		"@electron-forge/maker-deb": "^7.3.0",
+		"@electron-forge/maker-rpm": "^7.3.0",
+		"@electron-forge/maker-squirrel": "^7.3.0",
+		"@electron-forge/maker-zip": "^7.3.0",
+		"@electron-forge/plugin-auto-unpack-natives": "^7.3.0",
+		"@electron-forge/plugin-fuses": "^7.2.0",
+		"@electron-forge/plugin-vite": "^7.3.0",
+		"@electron/fuses": "^1.7.0",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.11.20",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"@vitejs/plugin-vue": "^5.0.4",
+		"electron": "29.0.1",
+		"eslint": "^8.0.1",
+		"eslint-plugin-import": "^2.25.0",
+		"sequelize-cli": "^6.6.2",
+		"ts-node": "^10.9.2",
+		"typescript": "~4.5.4",
+		"vite": "^5.0.12"
+	},
+	"keywords": [],
+	"author": {
+		"name": "Angus Lin",
+		"email": "Angus.lin@microtek.com.tw"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"electron-log": "^5.1.1",
+		"electron-squirrel-startup": "^1.0.0",
+		"element-plus": "^2.5.6",
+		"express": "^4.18.2",
+		"reflect-metadata": "^0.2.1",
+		"sequelize": "^6.37.1",
+		"sqlite3": "^5.1.7",
+		"umzug": "^3.7.0",
+		"vue": "^3.4.19"
+	}
 }
