--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/data-source.ts"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.3.0",
@@ -22,6 +26,7 @@
     "@electron-forge/plugin-vite": "^7.3.0",
     "@electron/fuses": "^1.7.0",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -42,6 +47,9 @@
     "electron-squirrel-startup": "^1.0.0",
     "element-plus": "^2.5.6",
     "express": "^4.18.2",
+    "reflect-metadata": "^0.2.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20",
     "vue": "^3.4.19"
   }
 }
