--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cron": "^3.1.6",
     "electron-squirrel-startup": "^1.0.0",
     "element-plus": "^2.5.6",
     "express": "^4.18.2",
